--- a/dist.ini
+++ b/dist.ini
@@ -16,8 +16,11 @@ name=Acme-CPANModules-WrappingText
 :version=0.606
 
 [Prereqs]
+strict=0
 
 [Prereqs / DevelopX_spec]
 -phase=develop
 -relationship=x_spec
-Acme::CPANModules=0.1.0
+Acme::CPANModules=0.1.7
+Module::Features=0.1.7
+
